--- a/mop/Pages/AddressesPage.xaml
+++ b/mop/Pages/AddressesPage.xaml
@@ -13,7 +13,7 @@
         <Button Content="← назад"
                     FontSize="34"
                     FontWeight="Bold"
-                    Width="200"
+                    Width="200" Height="100"
                     Background="Transparent"
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
@@ -144,7 +144,7 @@
                     <Button Content="+"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="добавление"
                         Foreground="White"
                         Background="Transparent"
@@ -163,7 +163,7 @@
                     <Button Content="×"
                             FontSize="40"
                             FontWeight="Bold"
-                            Height="80"
+                            Height="80" Style="{StaticResource circle}"
                             ToolTip="удаление"
                             Foreground="White"
                             Background="Transparent"
@@ -182,7 +182,7 @@
                     <Button Content="⋮"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="изменение"
                         Foreground="White"
                         Background="Transparent"
