--- a/mop/Pages/BrigadesPage.xaml
+++ b/mop/Pages/BrigadesPage.xaml
@@ -28,7 +28,7 @@
         <Button Content="← назад"
                     FontSize="34"
                     FontWeight="Bold"
-                    Width="200"
+                    Width="200" Height="100"
                     Background="Transparent"
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" 
@@ -139,7 +139,7 @@
                     <Button Content="+"
                     FontSize="40"
                     FontWeight="Bold"
-                    Height="80"
+                    Height="80" Style="{StaticResource circle}"
                     ToolTip="добавление"
                     Foreground="White"
                     Background="Transparent"
@@ -158,7 +158,7 @@
                     <Button Content="⋮"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="изменение"
                         Foreground="White"
                         Background="Transparent"
@@ -178,7 +178,7 @@
                         <Button Content="🗘"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="добавление"
                         Foreground="White"
                         Background="Transparent"
