--- a/mop/Pages/ClientsPage.xaml
+++ b/mop/Pages/ClientsPage.xaml
@@ -154,7 +154,7 @@
                 <Button Content="+"
                     FontSize="40"
                     FontWeight="Bold"
-                    Height="80"
+                    Height="80" Style="{StaticResource circle}"
                     ToolTip="добавление"
                     Foreground="White"
                     Background="Transparent"
@@ -173,7 +173,7 @@
                 <Button Content="×"
                     FontSize="40"
                     FontWeight="Bold"
-                    Height="80"
+                    Height="80" Style="{StaticResource circle}"
                     ToolTip="удаление"
                     Foreground="White"
                     Background="Transparent"
@@ -192,7 +192,7 @@
                 <Button Content="⋮"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="изменение"
                         Foreground="White"
                         Background="Transparent"
