--- a/mop/Pages/EmployeesPage.xaml
+++ b/mop/Pages/EmployeesPage.xaml
@@ -28,7 +28,7 @@
         <Button Content="← назад"
                 FontSize="34"
                 FontWeight="Bold"
-                Width="200"
+                Width="200" Height="100"
                 ToolTip="возвращение назад"
                 Background="Transparent"
                 BorderThickness="0" 
@@ -186,7 +186,7 @@
                     <Button Content="+"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="добавление"
                         Foreground="White"
                         Background="Transparent"
@@ -205,7 +205,7 @@
                     <Button Content="×"
                             FontSize="40"
                             FontWeight="Bold"
-                            Height="80"
+                            Height="80" Style="{StaticResource circle}"
                             ToolTip="удаление"
                             Foreground="White"
                             Background="Transparent"
@@ -224,7 +224,7 @@
                         <Button Content="🗘"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="добавление"
                         Foreground="White"
                         Background="Transparent"
