--- a/mop/Pages/ServicesPage.xaml
+++ b/mop/Pages/ServicesPage.xaml
@@ -13,7 +13,7 @@
         <Button Content="← назад"
                     FontSize="34"
                     FontWeight="Bold"
-                    Width="200"
+                    Width="200" Height="100"
                     Background="Transparent"
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
@@ -148,7 +148,7 @@
                     </Border.Background>
                     <Button Content="+"
              FontSize="40"
-             FontWeight="Bold"
+             FontWeight="Bold" Style="{StaticResource circle}"
              Height="80"
              ToolTip="добавление"
              Foreground="White"
@@ -168,7 +168,7 @@
                     <Button Content="×"
              FontSize="40"
              FontWeight="Bold"
-             Height="80"
+             Height="80" Style="{StaticResource circle}"
              ToolTip="удаление"
              Foreground="White"
              Background="Transparent"
@@ -187,7 +187,7 @@
                     <Button Content="⋮"
                  FontSize="40"
                  FontWeight="Bold"
-                 Height="80"
+                 Height="80" Style="{StaticResource circle}"
                  ToolTip="изменение"
                  Foreground="White"
                  Background="Transparent"
