--- a/mop/Windows/EditBrigadeWindow.xaml
+++ b/mop/Windows/EditBrigadeWindow.xaml
@@ -172,6 +172,7 @@
                 </Border.Background>
                 <Button Content="+"
             FontSize="25"
+                        Style="{StaticResource circle}"
             FontWeight="Bold"
             Height="40"
             ToolTip="добавление"
@@ -192,7 +193,7 @@
                 <Button Content="×"
                 FontSize="25"
                 FontWeight="Bold"
-                Height="40"
+                Height="40" Style="{StaticResource circle}"
                 ToolTip="удаление"
                 Foreground="White"
                 Background="Transparent"
@@ -211,7 +212,7 @@
                 <Button Content="🗘"
                 FontSize="25"
                 FontWeight="Bold"
-                Height="40"
+                Height="40" Style="{StaticResource circle}"
                 ToolTip="удаление"
                 Foreground="White"
                 Background="Transparent"
