--- a/mop/Pages/MenuSecondPage.xaml
+++ b/mop/Pages/MenuSecondPage.xaml
@@ -164,7 +164,7 @@
         <Button Content="← назад"
                     FontSize="34"
                     FontWeight="Bold"
-                    Width="200"
+                    Width="200" Height="100"
                     Background="Transparent"
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
