--- a/mop/Pages/OrdersPage.xaml
+++ b/mop/Pages/OrdersPage.xaml
@@ -13,7 +13,7 @@
         <Button Content="← назад"
                     FontSize="34"
                     FontWeight="Bold"
-                    Width="200"
+                    Width="200" Height="100"
                     Background="Transparent"
                     BorderThickness="0" 
                     x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
@@ -208,7 +208,7 @@
                     <Button Content="+"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="добавление"
                         Foreground="White"
                         Background="Transparent"
@@ -227,7 +227,7 @@
                     <Button Content="×"
                         FontSize="40"
                         FontWeight="Bold"
-                        Height="80"
+                        Height="80" Style="{StaticResource circle}"
                         ToolTip="удаление"
                         Foreground="White"
                         Background="Transparent"
@@ -246,7 +246,7 @@
                     <Button Content="⋮"
                             FontSize="40"
                             FontWeight="Bold"
-                            Height="80"
+                            Height="80" Style="{StaticResource circle}"
                             ToolTip="изменение"
                             Foreground="White"
                             Background="Transparent"
