--- a/mop/Pages/ProfilePage.xaml
+++ b/mop/Pages/ProfilePage.xaml
@@ -46,17 +46,9 @@
                 FontSize="34"
                 FontWeight="Bold" 
                 Width="200" Height="100"
-                Background="Transparent"
+                Style="{StaticResource back}"
                 BorderThickness="0" 
-                x:Name="BackBtn" Click="BackBtn_Click" 
->
-            <Button.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
+                x:Name="BackBtn" Click="BackBtn_Click" >
         </Button>
         <TextBlock Text="профиль"
                FontSize="35" 
