--- a/mop/Pages/RequestsPage.xaml
+++ b/mop/Pages/RequestsPage.xaml
@@ -21,14 +21,8 @@
         </Image>
         <Button Content="← назад" FontSize="34" FontWeight="Bold" 
                 Width="200" ToolTip="возвращение назад" Height="100"
-                Background="Transparent" BorderThickness="0" x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
-            <Button.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
+               Style="{StaticResource back}" BorderThickness="0" x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
+        
         </Button>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
             <TextBlock Text="запросы на изменение данных" FontSize="70" TextWrapping="Wrap" Margin="0 0 0 15" Width="700" TextAlignment="Center" FontWeight="Bold" HorizontalAlignment="Center">
