--- a/mop/Pages/editingPages/AddressesEditPage.xaml
+++ b/mop/Pages/editingPages/AddressesEditPage.xaml
@@ -24,23 +24,6 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Button Content="← назад"
-                FontSize="34"
-                FontWeight="Bold"
-                Width="200" Height="100"
-                Background="Transparent"
-                BorderThickness="0" 
-                x:Name="BackBtn" 
-                Click="BackBtn_Click"
-                Grid.RowSpan="2" Margin="171,-10,112,10">
-            <Button.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
-        </Button>
         <Image Source="/Images/Vector.png"
            Grid.Column="2" 
            Grid.RowSpan="4" 
@@ -60,8 +43,18 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
+        <Button Content="← назад"
+                FontSize="34"
+                FontWeight="Bold"
+                Width="200" Height="100"
+                Style="{StaticResource back}"
+                BorderThickness="0" 
+                x:Name="BackBtn" 
+                Click="BackBtn_Click"
+                Grid.RowSpan="2" Margin="171,-10,112,10">
+        </Button>
         <TextBlock Text="изменить объект"
-               FontSize="35" 
+               FontSize="55" 
                FontWeight="Bold"
                VerticalAlignment="Center"
                HorizontalAlignment="Center"
@@ -77,7 +70,7 @@
         </TextBlock>
 
         <TextBlock Text="клиент" 
-                    FontSize="25"
+                    FontSize="35"
                     FontWeight="Bold"
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Center" 
@@ -94,7 +87,7 @@
         <ComboBox Grid.RowSpan="2" Grid.ColumnSpan="2" 
               Grid.Row="1" Grid.Column="1"
               x:Name="clientsCb"
-              Width="250" Height="40" FontWeight="Bold"
+              Width="250" Height="60" FontWeight="Bold"
               ItemsSource="{Binding clients}">
             <ComboBox.Foreground>
                 <LinearGradientBrush>
@@ -123,12 +116,12 @@
 
         <TextBlock Text="улица" 
                TextWrapping="Wrap"
-               FontSize="25" 
+               FontSize="35" 
                FontWeight="Bold"
                HorizontalAlignment="Center" 
-               VerticalAlignment="Top" 
+               VerticalAlignment="Center" 
                Grid.RowSpan="2" Grid.ColumnSpan="2" 
-               Grid.Row="2" RenderTransformOrigin="0.484,-0.718" Margin="0,58,0,0">
+               Grid.Row="2">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -141,7 +134,7 @@
                 CornerRadius="26"
                 Grid.RowSpan="2" Grid.ColumnSpan="2" 
                 Grid.Row="2" Grid.Column="1"
-                Height="40" Width="250">
+                Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -150,8 +143,8 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
             <TextBox Background="Transparent"
-                 FontSize="25"
-                 Height="40" 
+                 FontSize="35"
+                 Height="60" 
                  BorderThickness="0"
                  Padding="15 0 0 0"
                  x:Name="streetTb">
@@ -167,7 +160,7 @@
         </Border>
 
         <TextBlock Text="дом" 
-              FontSize="25"
+              FontSize="35"
                FontWeight="Bold"
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
@@ -185,7 +178,7 @@
                 CornerRadius="26"
                 Grid.RowSpan="2" Grid.ColumnSpan="2" 
                 Grid.Row="3" Grid.Column="1"
-                Height="37" Width="250">
+                Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -194,8 +187,8 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
             <TextBox Background="Transparent"
-                 FontSize="25"
-                 Height="40"
+                 FontSize="35"
+                 Height="60"
                  BorderThickness="0"
                  Padding="15 0 0 0"
                  x:Name="houseTb" >
@@ -211,12 +204,12 @@
         </Border>
 
         <TextBlock Text="кв/офис" 
-      FontSize="25"
+      FontSize="35"
        FontWeight="Bold"
        HorizontalAlignment="Center" 
-       VerticalAlignment="Top" 
-       Grid.RowSpan="1" Grid.ColumnSpan="2" 
-       Grid.Row="5">
+       VerticalAlignment="Center" 
+       Grid.RowSpan="2" Grid.ColumnSpan="2" 
+       Grid.Row="4">
             <TextBlock.Foreground>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -227,9 +220,9 @@
         </TextBlock>
         <Border BorderThickness="4"
         CornerRadius="26"
-        Grid.RowSpan="1" Grid.ColumnSpan="2" 
-        Grid.Row="5" Grid.Column="1"
-        Height="37" Width="250">
+        Grid.RowSpan="2" Grid.ColumnSpan="2" 
+        Grid.Row="4" Grid.Column="1"
+        Height="60" Width="250">
             <Border.BorderBrush>
                 <LinearGradientBrush>
                     <GradientStop Color="#C0D5B3" Offset="0"/>
@@ -238,11 +231,11 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
             <TextBox Background="Transparent"
-         FontSize="25"
-         Height="40"
-         BorderThickness="0"
-         Padding="15 0 0 0"
-         x:Name="roomTb" >
+                    FontSize="35"  
+                    Height="50" 
+                    BorderThickness="0"
+                    Padding="15 0 0 0"
+                    x:Name="roomTb" >
 
                 <TextBlock.Foreground>
                     <LinearGradientBrush>
@@ -254,8 +247,8 @@
             </TextBox>
         </Border>
 
-        <Border CornerRadius="26" Height="35" Width="150"
-            Grid.Column="1"
+        <Border CornerRadius="26"  Width="250"
+            Grid.Column="1" Height="60"
             Grid.Row="8">
             <Border.Background>
                 <LinearGradientBrush>
@@ -265,12 +258,12 @@
                 </LinearGradientBrush>
             </Border.Background>
             <Button Content="добавить"
-                FontSize="25"
+                FontSize="45" Height="60"
                 FontWeight="Bold"
                 Foreground="White"
                 Background="Transparent"
                 BorderThickness="0" 
-                x:Name="SaveBtn" Click="SaveBtn_Click" Height="35" VerticalAlignment="Top"/>
+                x:Name="SaveBtn" Click="SaveBtn_Click" VerticalAlignment="Top"/>
         </Border>
 
     </Grid>
