--- a/mop/Pages/editingPages/ClientsEditPage.xaml
+++ b/mop/Pages/editingPages/ClientsEditPage.xaml
@@ -45,16 +45,9 @@
         FontSize="34"
         FontWeight="Bold"
         Width="200" Height="100"
-        Background="Transparent"
+       Style="{StaticResource back}"
         BorderThickness="0" 
         x:Name="BackBtn" Click="BackBtn_Click">
-            <Button.Foreground>
-                <LinearGradientBrush>
-                    <GradientStop Color="#C0D5B3" Offset="0"/>
-                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                    <GradientStop Color="#A3AEE6" Offset="1"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
         </Button>
         <TextBlock Text="изменить клиента"
             FontSize="55" 
