--- a/mop/App.xaml
+++ b/mop/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:mop"
-             StartupUri="MainWindow.xaml">
+             StartupUri="StartLogo.xaml">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="Background" Value="#FF04A0FF"></Setter>
@@ -45,6 +45,29 @@
                     </Setter>
                     <Setter Property="Foreground" Value="AliceBlue"></Setter>
                     <Setter Property="BorderBrush" Value="#CFFFBD"></Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Button" x:Key="start">
+            <Setter Property="Background" Value="Transparent"></Setter>
+            <Setter Property="Foreground" Value="#B3C9D5">
+
+            </Setter>
+            <Setter Property="BorderBrush" Value="Transparent"></Setter>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" CornerRadius="40" BorderThickness="3">
+                            <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="Center" HorizontalAlignment="Center"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="Transparent">
+                    </Setter>
+                    <Setter Property="Foreground" Value="Transparent"></Setter>
                 </Trigger>
             </Style.Triggers>
         </Style>
