--- a/mop/Pages/ClientsPage.xaml
+++ b/mop/Pages/ClientsPage.xaml
@@ -49,6 +49,35 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="фамилия: " FontWeight="Bold" FontSize="25">
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBlock>
+                <Border BorderThickness="4" CornerRadius="26" Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Grid.Column="1" Height="40" Width="170">
+                    <Border.BorderBrush>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.BorderBrush>
+                    <TextBox Background="Transparent" FontSize="25" BorderThickness="0" Height="40" BorderBrush="Transparent" Padding="15 0 0 0" x:Name="surnameTb" TextChanged="surnameTb_TextChanged">
+                        <TextBox.Foreground>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </TextBox.Foreground>
+                    </TextBox>
+                </Border>
+            </StackPanel>
             <ListView x:Name="clientsLv" 
                     Width="1200" Height="400"
                     FontSize="20"
