--- a/mop/Pages/EmployeesPage.xaml
+++ b/mop/Pages/EmployeesPage.xaml
@@ -33,7 +33,7 @@
                 Style="{StaticResource back}"
                 BorderThickness="0" 
                 x:Name="BackBtn" Click="BackBtn_Click" Margin="65,10,1015,602">
-            
+
         </Button>
 
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
@@ -50,6 +50,35 @@
                     </LinearGradientBrush>
                 </TextBlock.Foreground>
             </TextBlock>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="фамилия: " FontWeight="Bold" FontSize="25">
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </TextBlock>
+                <Border BorderThickness="4" CornerRadius="26" Grid.RowSpan="2" Grid.ColumnSpan="2" Grid.Row="1" Grid.Column="1" Height="40" Width="170">
+                    <Border.BorderBrush>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#C0D5B3" Offset="0"/>
+                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                            <GradientStop Color="#A3AEE6" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.BorderBrush>
+                    <TextBox Background="Transparent" FontSize="25" BorderThickness="0" BorderBrush="Transparent" Padding="15 0 0 0" x:Name="surnameTb" TextChanged="surnameTb_TextChanged" Height="40" VerticalAlignment="Top">
+                        <TextBox.Foreground>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </TextBox.Foreground>
+                    </TextBox>
+                </Border>
+            </StackPanel>
             <ListView x:Name="employeesLv" 
                       Width="1200" Height="400"
                       FontSize="20"
@@ -166,18 +195,18 @@
                 </ListView.View>
             </ListView>
             <StackPanel Orientation="Horizontal">
-                
-            <StackPanel x:Name="mngS" Orientation="Horizontal">
-                <Border CornerRadius="40"
+
+                <StackPanel x:Name="mngS" Orientation="Horizontal">
+                    <Border CornerRadius="40"
                     Width="80">
-                    <Border.Background>
-                        <LinearGradientBrush>
-                            <GradientStop Color="#C0D5B3" Offset="0"/>
-                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                            <GradientStop Color="#A3AEE6" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
-                    <Button Content="+"
+                        <Border.Background>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <Button Content="+"
                         FontSize="40"
                         FontWeight="Bold"
                         Height="80" Style="{StaticResource circle}"
@@ -186,17 +215,17 @@
                         Background="Transparent"
                         BorderThickness="0" 
                         x:Name="addBtn" Click="addBtn_Click" HorizontalAlignment="Center" Width="80"/>
-                </Border>
-                <Border CornerRadius="40"
+                    </Border>
+                    <Border CornerRadius="40"
                     Width="80">
-                    <Border.Background>
-                        <LinearGradientBrush>
-                            <GradientStop Color="#C0D5B3" Offset="0"/>
-                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                            <GradientStop Color="#A3AEE6" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
-                    <Button Content="×"
+                        <Border.Background>
+                            <LinearGradientBrush>
+                                <GradientStop Color="#C0D5B3" Offset="0"/>
+                                <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                <GradientStop Color="#A3AEE6" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                        <Button Content="×"
                             FontSize="40"
                             FontWeight="Bold"
                             Height="80" Style="{StaticResource circle}"
@@ -205,17 +234,18 @@
                             Background="Transparent"
                             BorderThickness="0" 
                             x:Name="delBtn" Click="delBtn_Click" HorizontalAlignment="Left" Width="80"/>
-                </Border>  <StackPanel Orientation="Horizontal" Margin="960 0 0 0">
-                <Border CornerRadius="40"
+                    </Border>
+                    <StackPanel Orientation="Horizontal" Margin="960 0 0 0">
+                        <Border CornerRadius="40"
                     Width="80">
-                    <Border.Background>
-                        <LinearGradientBrush>
-                            <GradientStop Color="#C0D5B3" Offset="0"/>
-                            <GradientStop Color="#B3C9D5" Offset="0.5"/>
-                            <GradientStop Color="#A3AEE6" Offset="1"/>
-                        </LinearGradientBrush>
-                    </Border.Background>
-                        <Button Content="🗘"
+                            <Border.Background>
+                                <LinearGradientBrush>
+                                    <GradientStop Color="#C0D5B3" Offset="0"/>
+                                    <GradientStop Color="#B3C9D5" Offset="0.5"/>
+                                    <GradientStop Color="#A3AEE6" Offset="1"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <Button Content="🗘"
                         FontSize="40"
                         FontWeight="Bold"
                         Height="80" Style="{StaticResource circle}"
@@ -224,13 +254,14 @@
                         Background="Transparent"
                         BorderThickness="0" 
                         x:Name="updateBtn" HorizontalAlignment="Left" Width="80" Click="updateBtn_Click"/>
-                </Border>
-            </StackPanel>
-            </StackPanel>
+                        </Border>
+                    </StackPanel>
+                </StackPanel>
 
-          
-       
-            </StackPanel> </StackPanel>
+
+
+            </StackPanel>
+        </StackPanel>
 
     </Grid>
 </Page>
