--- a/mop/Pages/editingPages/ServicesEditPage.xaml
+++ b/mop/Pages/editingPages/ServicesEditPage.xaml
@@ -212,7 +212,7 @@
                     <GradientStop Color="#A3AEE6" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <Button Content="добавить"
+            <Button Content="изменить"
                 FontSize="45" 
                 FontWeight="Bold"
                 Foreground="White"
