--- a/mop/Windows/EditBrigadeWindow.xaml
+++ b/mop/Windows/EditBrigadeWindow.xaml
@@ -232,7 +232,7 @@
                     <GradientStop Color="#A3AEE6" Offset="1"/>
                 </LinearGradientBrush>
             </Border.Background>
-            <Button Content="добавить"
+            <Button Content="изменить"
             FontSize="25"
             FontWeight="Bold"
             Foreground="White"
