--- a/mop/App.xaml
+++ b/mop/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:mop"
-             StartupUri="StartLogo.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="Background" Value="#FF04A0FF"></Setter>
