--- a/mop/Pages/addingPages/AddOrderPage.xaml
+++ b/mop/Pages/addingPages/AddOrderPage.xaml
@@ -222,7 +222,7 @@
             </TextBox>
         </Border>
         
-        <TextBlock Text="площадь/кол-во" 
+        <TextBlock Text="кол-во человек" 
                    FontSize="35"
                    FontWeight="Bold"
                    HorizontalAlignment="Center" 
